--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -28,14 +28,14 @@ header_nav_home: true
         </div>
       </div>
       <div class="home-intro-split">
-        <div class="boxed bg-rh-black home-intro-who">
+        <div class="boxed home-intro-who">
           <div class="boxed-inner">
             <h2>Who does Real Change help?</h2>
             <p><strong>The Real Change fund supports individuals who are homeless by paying for items they need -</strong> a deposit for a home, a training course, clothes for a job interview, furnishing for a new flat, or travel costs.</p>
             <p><a href="#">Find out more about how Real Change works and how the money is spent.</a></p>
           </div>
         </div>
-        <div class="boxed bg-rh-black home-intro-apply">
+        <div class="boxed home-intro-apply">
           <div class="boxed-inner">
             <h2>How can you apply?</h2>
             <p>If your organisation provides a service to support people who are homeless in Wigan &amp; Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <a href="#">0000 000 000</a> or email <a href="#">xxxxxx@realchange.co.uk </a> or <a href="#">find out more here</a>. </p>
@@ -72,40 +72,29 @@ header_nav_home: true
     </div>
   </section>
 
-  <section class="section home-partners">
+  <section class="section bg-rh-grey-light home-partners">
     <div class="container">
       <div class="home-partners-header">
         <h2 class="h1 home-partners-title">Help from our Partners</h2>
       </div>
-      <div class="home-partners-media aspect-bg aspect-bg-2by1">
+      <div class="home-partners-media">
         <div class="aspect aspect-2by1">
-          <iframe src="https://www.youtube.com/embed/pjxX5ndMCDo?rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          {{!-- <img alt="" src="assets/uploads/home-partners-media.jpg"> --}}
+          {{!-- <iframe src="https://www.youtube.com/embed/pjxX5ndMCDo?rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe> --}}
+          <img alt="" src="assets/uploads/home-partners-banner-2.jpg">
         </div>
       </div>
       <div class="home-partners-body">
-        <p><strong>If you are sleeping rough in Wigan &amp; Leigh and want to apply for funds to help you get off the street, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf.</strong></p>
-        <p>Real Change Wigan &amp; Leigh currently works in partnership with the following organisations:</p>
+        <p><strong>If you are sleeping rough, homeless or at risk of homelessness in Doncaster and want to apply for funds, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf.</strong></p>
+        <p>Real Help Doncaster currently works in partnership with the following organisations:</p>
         <ul class="list-flex font-weight-bold">
-          <li><a href="#" target="_blank">Barnabus</a></li>
-          <li><a href="#" target="_blank">Big Issue North</a></li>
-          <li><a href="#" target="_blank">Boaz Trust</a></li>
-          <li><a href="#" target="_blank">Booth Centre</a></li>
-          <li><a href="#" target="_blank">Centrepoint North</a></li>
-          <li><a href="#" target="_blank">Change4Good</a></li>
-          <li><a href="#" target="_blank">Coffee4Craig</a></li>
-          <li><a href="#" target="_blank">Cornerstone</a></li>
-          <li><a href="#" target="_blank">Just Life</a></li>
-          <li><a href="#" target="_blank">Lifeshare</a></li>
-          <li><a href="#" target="_blank">Manchester City of Sanctuary</a></li>
-          <li><a href="#" target="_blank">MASH</a></li>
-          <li><a href="#" target="_blank">MCC Rough Sleeper Team</a></li>
-          <li><a href="#" target="_blank">Mens Room</a></li>
-          <li><a href="#" target="_blank">Mustard Tree</a></li>
-          <li><a href="#" target="_blank">On The Out</a></li>
-          <li><a href="#" target="_blank">Reach Out to the Community</a></li>
+          <li><a href="#" target="_blank">DMBC</a></li>
+          <li><a href="#" target="_blank">Healthwatch</a></li>
+          <li><a href="#" target="_blank">Doncaster Mind</a></li>
+          <li><a href="#" target="_blank">St Ledger Homes</a></li>
+          <li><a href="#" target="_blank">Changing Lives</a></li>
+          <li><a href="#" target="_blank">Aspire</a></li>
           <li><a href="#" target="_blank">Riverside</a></li>
-          <li><a href="#" target="_blank">Shelter</a></li>
+          <li><a href="#" target="_blank">Big Issue North</a></li>
         </ul>
       </div>
     </div>
