--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -11,14 +11,14 @@
 
   <section class="section home-intro">
     <div class="container">
-      <div class="boxed bg-rh-black home-intro-whatis">
+      <div class="boxed home-intro-whatis">
         <div class="boxed-inner">
           <h2>{{ .Params.whatis.heading }}</h2>
           {{ $whatisBodyMarkdown := .Params.whatis.body | markdownify }}
           {{ if not ( strings.Contains $whatisBodyMarkdown "<p>" ) }}<p>{{ $whatisBodyMarkdown }}</p>{{ else }}{{ $whatisBodyMarkdown }}{{ end }}
           {{ if .Params.whatis.button.url }}<a class="button d-block" href="{{ .Params.whatis.button.url }}">{{ .Params.whatis.button.text }}</a>{{ end }}
         </div>
-        <div class="boxed-media aspect aspect-6by5">
+        <div class="boxed-media aspect aspect-6by5 sr-only">
           <img alt="" class="aspect-item" src="{{ .Params.whatis.image }}">
         </div>
       </div>
@@ -30,7 +30,7 @@
             {{ if not ( strings.Contains $whoBodyMarkdown "<p>" ) }}<p>{{ $whoBodyMarkdown }}</p>{{ else }}{{ $whoBodyMarkdown }}{{ end }}
           </div>
         </div>
-        <div class="boxed bg-rh-black home-intro-apply">
+        <div class="boxed home-intro-apply">
           <div class="boxed-inner">
             <h2>{{ .Params.how.heading }}</h2>
             {{ $howBodyMarkdown := .Params.how.body | markdownify }}
@@ -67,20 +67,20 @@
   </section>
   {{ end }}{{ end }}
 
-  <section class="section home-partners">
+  <section class="section bg-rh-grey-light home-partners">
     <div class="container">
       <div class="home-partners-header">
         <h2 class="h1 home-partners-title">{{ .Params.partners.heading }}</h2>
       </div>
       {{ if .Params.partners.youtube }}
-      <div class="home-partners-media aspect-bg aspect-bg-2by1">
+      <div class="home-partners-media">
         <div class="aspect aspect-2by1">
           <iframe src="{{ .Params.partners.youtube }}" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
       {{ end }}
       {{ if .Params.partners.image }}
-      <div class="home-partners-media aspect-bg aspect-bg-2by1">
+      <div class="home-partners-media">
         <div class="aspect aspect-2by1">
           <img alt="" src="{{ .Params.partners.image }}">
         </div>
