--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -5,26 +5,26 @@ header_nav_home: true
 ---
 {{> header header__nav=true }}
 
-<span>Help make</span> a Real Change in <strong>Wigan &amp; Leigh</strong>
-
-{{#if header__hero}}
-<div class="header-hero">
-  <h1 class="header-hero-title">{{{ header__hero__text }}}</h1>
+<div class="hero">
+  <div class="hero-inner">
+    <h1 class="hero-title">Real Help Doncaster</h1>
+    <p>A local fund that helps homeless and vulnerable people off the street and into a healthier and safer lifestyle.</p>
+    <a class="button button-primary" href="#">Donate and make a change</a>
+  </div>
 </div>
-{{/if}}
 
 <div id="main">
   <section class="section home-intro">
     <div class="container">
       <div class="boxed home-intro-whatis">
         <div class="boxed-inner">
-          <h2>What is Real Change?</h2>
-          <p><strong>Real Change pays for practical items individuals need to build independent lives away from the streets.</strong></p>
-          <p>If everyone who lives, works or visits Wigan &amp; Leigh donates, together we can make a Real Change!</p>
-          <a class="button d-block" href="#">Donate and make a change</a>
+          <h2>What is Real Help Doncaster?</h2>
+          <p><strong>Real Help pays for practical items individuals need to build independent lives away from the streets.</strong></p>
+          <p>If everyone who lives, works or visits Doncaster donates, together we can make a Real Help to ending homelessness!</p>
+          <a class="button button-primary d-block" href="#">Changing the way you GIVE here</a>
         </div>
-        <div class="boxed-media aspect aspect-6by5">
-          <img alt="" class="aspect-item" src="assets/uploads/home-intro-whatis.png">
+        <div class="boxed-media aspect aspect-1by1">
+          <img alt="" class="aspect-item" src="assets/uploads/home-intro-whatis.jpg">
         </div>
       </div>
       <div class="home-intro-split">
@@ -38,36 +38,9 @@ header_nav_home: true
         <div class="boxed home-intro-apply">
           <div class="boxed-inner">
             <h2>How can you apply?</h2>
-            <p>If your organisation provides a service to support people who are homeless in Wigan &amp; Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <a href="#">0000 000 000</a> or email <a href="#">xxxxxx@realchange.co.uk </a> or <a href="#">find out more here</a>. </p>
+            <p>If your organisation provides a service to support people who are sleeping rough, homeless or at risk of homelessness in Doncaster and you would like to discuss how to become an approved Real Help partner, please contact us at: email <a href="#">info@realhelpdoncaster.org</a></p>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section home-stories">
-    <div class="container">
-      <div class="home-stories-header">
-        <h2 class="h1 home-stories-title">56 people helped so far in Wigan &amp; Leigh</h2>
-      </div>
-      <div class="home-stories-body">
-        <div class="card-story card-stroy-witharrow">
-          <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
-          <div class="card-story-image aspect aspect-5by2">
-            <img alt="" src="assets/uploads/story-jack-5by2.jpg">
-          </div>
-          <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
-        </div>
-        <div class="card-story card-stroy-witharrow">
-          <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
-          <div class="card-story-image aspect aspect-5by2">
-            <img alt="" src="assets/uploads/story-danny-5by2.jpg">
-          </div>
-          <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
-        </div>
-      </div>
-      <div class="home-stories-footer text-center">
-        <a class="button button-primary" href="#">Donate and make a real change</a>
       </div>
     </div>
   </section>
