--- a/templates/src/_components/_components.scss
+++ b/templates/src/_components/_components.scss
@@ -8,5 +8,6 @@
 @import "content/content";
 @import "footer/footer";
 @import "header/header";
+@import "hero/hero";
 @import "stat/stat";
 @import "section/section";
