--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -1,6 +1,14 @@
 {{ define "main" }}
 {{ partial "header.html" .Params.header }}
 
+<div class="hero">
+  <div class="hero-inner">
+    <h1 class="hero-title">Real Help Doncaster</h1>
+    <p>A local fund that helps homeless and vulnerable people off the street and into a healthier and safer lifestyle.</p>
+    <a class="button button-primary" href="#">Donate and make a change</a>
+  </div>
+</div>
+
 <div id="main">
 
   <section class="section home-intro">
